Proper use of ObjectBuffer and simplification